--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "@fullcalendar/interaction": "^6.1.15",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "jwt-decode": "^4.0.0",
+    "ngx-cookie-service": "^17.1.0",
+    "ngx-spinner": "^17.0.0",
+    "ngx-toastr": "^19.0.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
