--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@fullcalendar/interaction": "^6.1.15",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^17.1.0",
+    "ngx-print": "^2.0.0",
     "ngx-spinner": "^17.0.0",
     "ngx-toastr": "^19.0.0",
     "primeflex": "^3.3.1",
