--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@fullcalendar/interaction": "^6.1.15",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.2",
+    "highcharts": "^12.1.2",
+    "highcharts-angular": "^4.0.1",
     "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^17.1.0",
     "ngx-print": "^2.0.0",
