static routes pdated

--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -2,22 +2,10 @@
     "routes": [
         {
             "route": "/login",
-            "serve": "/login.html"
-        },
-        {
-            "route": "/{*any}.html",
             "serve": "/index.html"
         },
         {
-            "route": "/{*any}.js",
-            "serve": "/index.html"
-        },
-        {
-            "route": "/{*any}.css",
-            "serve": "/index.html"
-        },
-        {
-            "route": "/{*any}",
+            "route": "/{*all}",
             "serve": "/index.html"
         }
     ]
