--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "highcharts": "^12.1.2",
     "highcharts-angular": "^4.0.1",
     "jwt-decode": "^4.0.0",
+    "lucide-angular": "^0.476.0",
     "ngx-cookie-service": "^17.1.0",
     "ngx-print": "^2.0.0",
     "ngx-spinner": "^17.0.0",
