added new dependencies

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "build-prod": "ng build --configuration=production"
+    "build-prod": "ng build --configuration=production",
+    "deploy": "gh-pages -d dist/KaresInvestments.UI"
   },
   "private": true,
   "dependencies": {
@@ -26,8 +27,11 @@
     "@fullcalendar/interaction": "^6.1.15",
     "bootstrap": "^5.3.3",
     "chart.js": "^4.4.6",
+    "gh-pages": "^6.3.0",
     "highcharts": "^12.1.2",
     "highcharts-angular": "^4.0.1",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "jwt-decode": "^4.0.0",
     "lucide-angular": "^0.476.0",
     "ngx-cookie-service": "^17.1.0",
